force-app/main/default/objects/Application_Question_Template__c/Application_Question_Template__c.object-meta.xml
<CustomObject>
    <label>Application Question Template</label>
    <nameField>
        <displayFormat>AQT-{00000}</displayFormat>
        <label>Application Question Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Question Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>