force-app/main/default/objects/Application_Question_Template__c/fields/Application_Form_Section__c.field-meta.xml
<CustomField>
    <fullName>Application_Form_Section__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Application Form Section</label>
    <referenceTo>Application_Form_Section__c</referenceTo>
    <relationshipLabel>Application Question Templates</relationshipLabel>
    <relationshipName>Application_Question_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>