force-app/main/default/objects/Application_Question_Template__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <formula>TEXT(Application_Form_Section__r.Form_To_Use_In__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form</label>
    <type>Text</type>
</CustomField>