force-app/main/default/objects/Application_Question_Template__c/fields/Page__c.field-meta.xml
<CustomField>
    <fullName>Page__c</fullName>
    <formula>Application_Question__r.Page_Number_To_Display_On__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Page #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>