force-app/main/default/objects/Application_Question_Template__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <formula>Application_Question__r.Question_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question #</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>