force-app/main/default/objects/Application_Question_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application_Window_Template__c</columns>
    <columns>Application_Form_Section__c</columns>
    <columns>Application_Question__c</columns>
    <columns>Page__c</columns>
    <columns>Question__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>